butterfly-web-ui/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: butterfly-web-ui
  namespace: fargate-compute
spec:
  replicas: 2
  selector:
    matchLabels:
      app: butterfly-web-ui
  template:
    metadata:
      labels:
        app: butterfly-web-ui
    spec:
      containers:
      - name: butterfly-web-ui
        image: 390468416359.dkr.ecr.us-west-2.amazonaws.com/butterfly-web-ui:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: butterfly-web-ui
  namespace: fargate-compute
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: butterfly-web-ui
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: butterfly-web-ui
  namespace: fargate-compute
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:390468416359:certificate/107b9d8e-ceed-4428-9d5a-aca1cc042e8e
spec:
  rules:
  - host: fly.plaza.red
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: butterfly-web-ui
            port:
              number: 80
  tls:
  - hosts:
    - fly.plaza.red
    secretName: butterfly-web-ui-tls
